<resources>
    <string name="app_name">QRecycle</string>
    <string name="main_text_1">Let\'s recycle together!</string>
    <string name="demoText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut in ligula rhoncus eros aliquam ultrices sit amet et ligula.</string>
    <string name="mainBtnText">Start Now!</string>
    <string name="mainSvgContentDescription">The World is mine!</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="registerMsg">Welcome to QRecycle!</string>
    <string name="registerBtnText">Register</string>
    <string name="registerUnderBtnSignInText">Sign in</string>
    <string name="registerUnderBtnQuestionText">Already signed in?</string>
    <string name="userNameText">Username</string>
    <string name="emailText">Email</string>
    <string name="passwordText">Password</string>
    <string name="confirmPasswordText">Confirm Password</string>
    <string name="qrecycle">QRecycle</string>
    <string name="sub_text_on_sign_activity">With this application recycling becomes iteractive as well as fun from winning prizes!</string>
    <string name="sign_up_text_sign_activity">Sign Up</string>
    <string name="sign_in_text_sign_activity">Sign In</string>
    <string name="text_view_log_in">Welcome back to QRecycle</string>
    <string name="log_in_btn_text">Log In</string>
    <string name="your_quests_profile">Quests</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="leaderboard_profile_text">Leaderboard</string>
    <string name="profile_picture_description_text">Profile picture</string>
    <string name="profile_name">%1$s</string>
    <string name="profile_email">Email: %1$s</string>
    <string name="profile_points">Points: %1$s</string>
    <string name="remember_me_btn">Remember me</string>
    <string name="profile_button_text">profile button</string>
    <string name="setting_button_text">setting button</string>
    <string name="qr_scanner_text">QR Scanner</string>
</resources>