<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/backgroundColor"
    tools:context=".RegisterActivity"
    >

    <TextView
        android:id="@+id/registerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:letterSpacing=".08"
        android:text="@string/registerMsg"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:paddingTop="40dp"
        android:paddingBottom="60dp"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:imeOptions="actionGo"
                android:hint="@string/fullNameText"
                android:fontFamily="@font/lobster"
                android:inputType="textCapWords"
                android:textColor="#363A43"
                android:textColorHint="#7A8089"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:imeOptions="actionGo"
                android:hint="@string/emailText"
                android:fontFamily="@font/lobster"
                android:inputType="textCapWords"
                android:textColor="#363A43"
                android:textColorHint="#7A8089" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:imeOptions="actionGo"
                android:hint="@string/passwordText"
                android:fontFamily="@font/lobster"
                android:inputType="textCapWords"
                android:textColor="#363A43"
                android:textColorHint="#7A8089"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            >

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:imeOptions="actionGo"
                android:hint="@string/confirmPasswordText"
                android:fontFamily="@font/lobster"
                android:inputType="textCapWords"
                android:textColor="#363A43"
                android:textColorHint="#7A8089"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textSize="22sp"
        android:letterSpacing=".05"
        android:textAllCaps="false"
        android:fontFamily="@font/lobster"
        android:text="@string/registerBtnText"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerUnderBtnQuestionText"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing=".08"
            android:textSize="18sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/signInTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/registerUnderBtnSignInText"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:letterSpacing=".08"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/darkBlue"
            android:clickable="true"
            />

    </LinearLayout>

</LinearLayout>